# vastgoed-analysis

./: main.py  pyproject.toml
data/: NL_immo_statbel_kwartaal_per_gemeente.xlsx  data.xlsx
notebooks/: kempen_vastgoed.ipynb
sources/: data.md
